save all before shutdown

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ crossorigin="anonymous"
 </div>
 </div>   
 </div></div>
+<div class="source-code">
 <h6>Open source code by Jackie Shields</h6>
+</div>
 <script src="src/index.js"></script>
 </body>
-
 </html>
