Updated overview section

--- a/index.html
+++ b/index.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Weather App</title>
-<link
-href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-rel="stylesheet"
-integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-crossorigin="anonymous"
-/>
-<script
-src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-crossorigin="anonymous"
-></script>
-<link rel="stylesheet" href="src/styles.css" />
-</head>
-<body>
-<div class="container">
-<div class="weather-app">
-<form class="form">
-<input type="text" placeholder="Enter a city..." id="enter-city" />
-<div class="buttons">
-<input type="submit" value="Search" id="search-button" />
-<input type="submit" value="Current" id="current-button" />
-</div> 
-</form>
-<div class="overview">
-<div class="row"><div class="col">
-<h2 id="city">Glasgow</h2></div>
-<h2 id="dayTime"> Sunday - 14:00</h2>
-<div class ="col-6">
-<ul>
-<li>Cloudy<span id="description"></span></li>
-<li>Humidity:<span id="humidity"></span>%</li>
-<li>Wind:<span id="wind"></span> km</li>
-</ul>
-</div>
-<div class = "row">
-<div class="col">    
-<span class="currentTemperature" id=current-temperature>
-17<a href="# id="celsius-link">°C</a> <a href="#" id="fahrenheit-link">°F</a></span>
-</div>
-</div>
-</div>   
-</div></div>
-<div class="source-code">
-<h6>Open source code by Jackie Shields</h6>
-</div>
-<script src="src/index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="weather-app">
+        <form class="form">
+          <input type="text" placeholder="Enter a city..." id="enter-city" />
+          <div class="buttons">
+            <input type="submit" value="Search" id="search-button" />
+            <input type="submit" value="Current" id="current-button" />
+          </div>
+        </form>
+        <div class="overview">
+          <div class="row">
+            <div class="col">
+              <h2 id="city">Glasgow</h2>
+            </div>
+            <div class="col">
+              <span class="currentTemperature" id="current-temperature">
+                17<a href="#" id="celsius-link">°C</a>
+                <a href="#" id="fahrenheit-link">°F</a></span
+              >
+            </div>
+            <h2 id="dayTime">Sunday - 14:00</h2>
+            <div class="col-6">
+              <ul>
+                <li>Cloudy<span id="description"></span></li>
+                <li>Humidity:<span id="humidity"></span>%</li>
+                <li>Wind:<span id="wind"></span> km</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="source-code">
+      <h6>Open source code by Jackie Shields</h6>
+    </div>
+    <script src="src/index.js"></script>
+  </body>
 </html>
