--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@
           <div class="row">
             <div class="col">
               <h2 id="city">Glasgow</h2>
+              <h2 id="dayTime">Sunday - 14:00</h2>
             </div>
+            <div class="col col-right">
+              <span class="currentTemperature" id="current-temperature"
+                ><strong> 17</strong></span
+              ><span class="units"><a href="#" id="celsius-link">°C</a>
+              <a href="#" id="fahrenheit-link">°F</a></span>
+            </div>
+            </div>
+            <div class="row">
             <div class="col">
-              <span class="currentTemperature" id="current-temperature">
-                17<a href="#" id="celsius-link">°C</a>
-                <a href="#" id="fahrenheit-link">°F</a></span
-              >
-            </div>
-            <h2 id="dayTime">Sunday - 14:00</h2>
-            <div class="col-6">
               <ul>
                 <li>Cloudy<span id="description"></span></li>
                 <li>Humidity:<span id="humidity"></span>%</li>
                 <li>Wind:<span id="wind"></span> km</li>
               </ul>
+            </div>
             </div>
           </div>
         </div>
