logged API results with app

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <div class="overview">
           <div class="row">
             <div class="col">
-              <h2 id="city">Glasgow</h2>
+              <h2 id="city"></h2>
               <h2 id="dayTime">Sunday - 14:00</h2>
             </div>
             <div class="col col-right">
               <span class="currentTemperature" id="current-temperature"
-                ><strong> 17</strong></span
+                ><strong></strong></span
               ><span class="units"><a href="#" id="celsius-link">°C</a>
               <a href="#" id="fahrenheit-link">°F</a></span>
             </div>
@@ -50,9 +50,9 @@
             <div class="row">
             <div class="col">
               <ul>
-                <li>Cloudy<span id="description"></span></li>
-                <li>Humidity:<span id="humidity"></span>%</li>
-                <li>Wind:<span id="wind"></span> km</li>
+                <li><span id="description"></span></li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km</li>
               </ul>
             </div>
             </div>
