--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="row">
             <div class="col">
               <h2 id="city"></h2>
-              <h2 id="dayTime">Sunday - 14:00</h2>
+  
             </div>
             <div class="col col-right">
               <span class="currentTemperature" id="current-temperature"
@@ -46,14 +46,16 @@
             </div>
             <div class="clearfix weather-temperature">
                 <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="Clear" id="icon" class="float-left" />
-                <div class="float-left">
+                <div class="float-left">       
             <div class="row">
             <div class="col">
               <ul>
+                <li>Last updated: <span id="date"></span></li>
                 <li><span id="description"></span></li>
                 <li>Humidity: <span id="humidity"></span>%</li>
                 <li>Wind: <span id="wind"></span> km</li>
               </ul>
+              
             </div>
             </div>
           </div>
