--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@ crossorigin="anonymous"
 <div class="row d-flex justify-content-center">
 <div class="col-md-6">
 <div class="weather-app">
-<form class="form">
+<form id="search-form">
+  <div class="row">
+    <div class="col-9">
 <input
 type="text"
 placeholder="Enter a city..."
 id="enter-city"
-/>
+class="form-control"
+/></div>
+<div class="col">
 <div class="buttons">
-<input type="submit" value="Search" id="search-button" />
-<input type="submit" value="Current" id="current-button" />
+<input type="submit" value="Search" id="search-button" class="btn btn-primary w-100" />
+</div>
+</div>
 </div>
 </form>
 <div class="overview">
