added search city function

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@ crossorigin="anonymous"
 <input
 type="text"
 placeholder="Enter a city..."
-id="enter-city"
+id="city-input"
 class="form-control"
+autocomplete="off"
 /></div>
 <div class="col">
 <div class="buttons">
