--- a/index.html
+++ b/index.html
@@ -72,24 +72,7 @@
                         <li>Humidity: <span id="humidity"></span>%</li>
                         <li>Wind: <span id="wind"></span> km</li>
                       </ul>
-                      <div class="weather-forecast">
-                        <div class="row">
-                          <div class="col-2">
-                            <div class="weather-forecast-date">Thu</div>
-                            <img
-                              src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-night.png"
-                              alt=""
-                              width="42"
-                            />
-                            <div class="weather-forecast-temperatures">
-                              <span class="weather-forecast-temperature-max">
-                                18°</span
-                              >
-                              <span class="weather-forecast-temperature-min">
-                                12°
-                              </span>
-                            </div>
-                          </div>
+                      <div class="weather-forecast" id="forecast">
                         </div>
                       </div>
                     </div>
