--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                     <div class="col col-right">
                       <span class="currentTemperature" id="current-temperature"
                         ><strong> </strong></span
-                      ><span class="units">
-                        <a href="#" id="celsius-link">°C</a>
-                        <a href="#" id="fahrenheit-link">°F</a></span
-                      >
+                      ><span class="units"> °C </span>
                     </div>
                   </div>
 
